# cdc-app

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  result.csv
.github/actions/python-setup/: action.yaml
.github/workflows/: workflow.yaml
airflow/: Dockerfile  airflow_settings.yaml  docker-compose.override.yml
airflow/dags/: main.py
airflow/dags/data/order/: order_2021-06-17.csv
airflow/dags/models/: airflow.py
airflow/init/: Dockerfile  initial.py  requirements.txt
airflow/init/models/: order.py
airflow/init/utils/: database.py  processing.py  utils.py
airflow/plugins/: plugins.py
airflow/plugins/operators/: process_cdc.py
app/: initial.py  main.py
app/models/: order.py
app/utils/: database.py  processing.py
