[tool.poetry]
name = "cdc-app"
version = "0.1.0"
description = ""
authors = ["ajauniskis <jauniskis.a@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyright = "^1.1.257"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
